==> puu1111/NQTT-/HARDWARE/scr/adc.c <==
/*-------------------------------------------------*/
/*                    超纬电子                     */
/*    淘宝地址： http://chaoweidianzi.taobao.com   */
/*-------------------------------------------------*/

#include "adc.h"
#include "delay.h"	

/*-------------------------------------------------*/
/*函数名：初始化ADC                                */
/*参  数：无                                       */
/*返回值：无                                       */
/*-------------------------------------------------*/													   
void  Adc_Init(void)
{    
	GPIO_InitTypeDef      GPIO_InitStructure;
	ADC_CommonInitTypeDef ADC_CommonInitStructure;
	ADC_InitTypeDef       ADC_InitStructure;

	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);    //使能GPIOA时钟
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC1, ENABLE);     //使能ADC1时钟

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0|GPIO_Pin_1|GPIO_Pin_2|GPIO_Pin_3|GPIO_Pin_4|GPIO_Pin_5|GPIO_Pin_6|GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AN;             //模拟输入
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL ;        //不带上下拉
	GPIO_Init(GPIOA, &GPIO_InitStructure);                   //初始化 PA0-PA7 8路通道

	RCC_APB2PeriphResetCmd(RCC_APB2Periph_ADC1,ENABLE);	     //ADC1复位
	RCC_APB2PeriphResetCmd(RCC_APB2Periph_ADC1,DISABLE);     //复位结束	 

	ADC_CommonInitStructure.ADC_Mode = ADC_Mode_Independent; //独立模式
	ADC_CommonInitStructure.ADC_TwoSamplingDelay = ADC_TwoSamplingDelay_5Cycles;//两个采样阶段之间的延迟5个时钟
	ADC_CommonInitStructure.ADC_DMAAccessMode = ADC_DMAAccessMode_Disabled;     //DMA失能
	ADC_CommonInitStructure.ADC_Prescaler = ADC_Prescaler_Div4;                 //预分频4分频。ADCCLK=PCLK2/4=84/4=21Mhz,ADC时钟最好不要超过36Mhz 
	ADC_CommonInit(&ADC_CommonInitStructure);                                   //按配置设置

	ADC_InitStructure.ADC_Resolution = ADC_Resolution_12b;                      //12位模式
	ADC_InitStructure.ADC_ScanConvMode = DISABLE;                               //非扫描模式	
	ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;                         //关闭连续转换
	ADC_InitStructure.ADC_ExternalTrigConvEdge = ADC_ExternalTrigConvEdge_None; //禁止触发检测，使用软件触发
	ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;                      //右对齐	
	ADC_InitStructure.ADC_NbrOfConversion = 1;                                  //1个转换在规则序列中 也就是只转换规则序列1 
	ADC_Init(ADC1, &ADC_InitStructure);                                         //按配置设置

	ADC_Cmd(ADC1, ENABLE);                                                      //开启AD转换器	

}

/*-------------------------------------------------*/
/*函数名：获得ADC结果                              */
/*参  数：ch: 通道数                               */
/*返回值：ADC的结果                                */
/*-------------------------------------------------*/	
u16 Get_Adc(u8 ch)   
{
	ADC_RegularChannelConfig(ADC1, ch, 1, ADC_SampleTime_480Cycles );	//ADC1,ADC通道,480个周期,提高采样时间可以提高精确度			    
	ADC_SoftwareStartConv(ADC1);		                                //使能指定的ADC1的软件转换启动功能		 
	while(!ADC_GetFlagStatus(ADC1, ADC_FLAG_EOC ));                     //等待转换结束
	return ADC_GetConversionValue(ADC1);	                            //返回转换结果
}
/*-------------------------------------------------*/
/*函数名：平均多次ADC结果，提高精度                */
/*参  数：ch: 通道数                               */
/*参  数：times: 平均次数                          */
/*返回值：平均后的结果                             */
/*-------------------------------------------------*/	
u16 Get_Adc_Average(u8 ch,u8 times)
{
	u32 temp_val=0;
	u8 t;
	for(t=0;t<times;t++)
	{
		temp_val+=Get_Adc(ch);
		delay_ms(5);
	}
	return temp_val/times;
}
